--- a/app/src/main/res/values/typography.xml
+++ b/app/src/main/res/values/typography.xml
@@ -18,43 +18,51 @@
     <style name="Typography.Sopkathon.Android3.Headline1">
         <item name="fontFamily">@font/pretendard_medium</item>
         <item name="android:textSize">32sp</item>
+        <item name="android:letterSpacing">-0.01</item>
     </style>
 
     <style name="Typography.Sopkathon.Android3.Headline2">
         <item name="fontFamily">@font/pretendard_medium</item>
         <item name="android:textSize">28sp</item>
+        <item name="android:letterSpacing">-0.01</item>
     </style>
 
     <style name="Typography.Sopkathon.Android3.Headline3">
         <item name="fontFamily">@font/pretendard_medium</item>
         <item name="android:textSize">24sp</item>
+        <item name="android:letterSpacing">-0.01</item>
     </style>
 
     <style name="Typography.Sopkathon.Android3.Body1">
         <item name="fontFamily">@font/pretendard_regular</item>
         <item name="android:textSize">18sp</item>
         <item name="android:lineSpacingMultiplier">1.4</item>
+        <item name="android:letterSpacing">-0.01</item>
     </style>
 
     <style name="Typography.Sopkathon.Android3.Body2">
         <item name="fontFamily">@font/pretendard_regular</item>
         <item name="android:textSize">16sp</item>
         <item name="android:lineSpacingMultiplier">1.4</item>
+        <item name="android:letterSpacing">-0.01</item>
     </style>
 
     <style name="Typography.Sopkathon.Android3.Body3">
         <item name="fontFamily">@font/pretendard_regular</item>
         <item name="android:textSize">14sp</item>
         <item name="android:lineSpacingMultiplier">1.4</item>
+        <item name="android:letterSpacing">-0.01</item>
     </style>
 
     <style name="Typography.Sopkathon.Android3.Label">
         <item name="fontFamily">@font/pretendard_regular</item>
         <item name="android:textSize">12sp</item>
+        <item name="android:letterSpacing">-0.015</item>
     </style>
 
     <style name="Typography.Sopkathon.Android3.Button">
         <item name="fontFamily">@font/pretendard_regular</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:letterSpacing">-0.015</item>
     </style>
 </resources>
