--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -14,9 +14,9 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="120dp"
         android:layout_marginEnd="30dp"
+        android:text="#1"
         android:textSize="15dp"
-        android:textStyle="bold"
-        android:text="#1" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textViewQuestion"
@@ -27,15 +27,14 @@
         android:layout_marginBottom="30dp"
         android:textSize="20dp"
         android:textStyle="bold"
-        android:text="오늘 하루, 감사한 사람과 \n그 이유는 무엇인가요?" />
+        tools:text="오늘 하루, 감사한 사람과 \n그 이유는 무엇인가요?" />
 
-    <!-- img width/height wrap_content로 수정하기 -->
     <ImageView
         android:id="@+id/imgRock"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@drawable/examplerock" />
+        tools:src="@drawable/ic_launcher_background" />
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/textViewAnswer"
@@ -45,8 +44,8 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
         android:background="@color/cardview_shadow_end_color"
+        tools:text="입력된 답변 내용입니다."
         android:textSize="20sp"
-        android:textStyle="bold"
-        android:text="입력된 답변 내용입니다." />
+        android:textStyle="bold" />
 
 </LinearLayout>
