--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Base.Theme.SopkathonAndroid3" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/green45</item>
-        <item name="colorOnPrimary">@color/neutral100</item>
+        <item name="colorOnPrimary">@color/background</item>
         <item name="android:statusBarColor">@color/neutral0</item>
     </style>
 
