[feat] detail UI 디테일 구현

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,51 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp"
+    android:background="@color/neutral98"
     tools:context=".presentation.detail.DetailActivity">
 
     <TextView
         android:id="@+id/textViewNumber"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginEnd="30dp"
-        android:text="#1"
+        android:layout_marginStart="20sp"
+        android:layout_marginTop="128sp"
+        android:layout_marginEnd="20sp"
+        android:text="#1 / 5월 19일"
         android:textSize="15dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewQuestion"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginStart="20sp"
+        android:layout_marginEnd="20sp"
         android:textSize="20dp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textAppearance="@style/Typography.Sopkathon.Android3.Headline2"
+        app:layout_constraintTop_toBottomOf="@+id/textViewNumber"
         tools:text="오늘 하루, 감사한 사람과 \n그 이유는 무엇인가요?" />
 
     <ImageView
         android:id="@+id/imgRock"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintDimensionRatio="1"
+        android:layout_marginHorizontal="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewQuestion"
         tools:src="@drawable/ic_launcher_background" />
 
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    <TextView
         android:id="@+id/textViewAnswer"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="30dp"
-        android:background="@color/cardview_shadow_end_color"
-        tools:text="입력된 답변 내용입니다."
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:layout_marginTop="40sp"
+        android:layout_marginStart="40sp"
+        android:layout_marginEnd="40sp"
+        android:textSize="20dp"
+        android:textAppearance="@style/Typography.Sopkathon.Android3.Body2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgRock"
+        tools:text="오늘 솝커톤을 함께 해 준 인삼보다 안삼 팀원들에게 감사함을 느꼈다. 밤 새느라 많이 힘들었을텐데 포기하지 않고 끝까지 솝커톤을 마친 우리 팀원들에게 박수!" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
