--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -5,16 +5,15 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/background"
     tools:context=".presentation.calendar.CalendarActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_calendar_header"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:background="@color/neutral90"
-        android:paddingVertical="22dp"
+        android:layout_height="64dp"
+        android:background="@color/green45"
+        android:paddingHorizontal="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -23,9 +22,11 @@
             android:id="@+id/tv_calendar_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:text="월간 돌 리포트"
+            style="@style/Typography.Sopkathon.Android3.Headline2"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="2023"
+        style="@style/Typography.Sopkathon.Android3.Body3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cl_calendar_header" />
@@ -55,6 +57,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="5"
+            style="@style/Typography.Sopkathon.Android3.Headline2"
+            android:textColor="@color/neutral10"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/tv_calendar_month_text"
             app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +69,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="월"
+            style="@style/Typography.Sopkathon.Android3.Headline2"
+            android:textColor="@color/neutral10"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv_calendar_month_number"
@@ -77,6 +83,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
+        android:paddingHorizontal="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cl_calendar_month"
