--- a/app/src/main/res/layout/fragment_calendar_warning_dialog.xml
+++ b/app/src/main/res/layout/fragment_calendar_warning_dialog.xml
@@ -4,65 +4,74 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/shape_white_fill_20_rect"
-    android:paddingHorizontal="58dp"
-    android:paddingVertical="20dp">
+    android:paddingHorizontal="20dp"
+    android:paddingVertical="40dp">
 
-    <ImageView
-        android:id="@+id/iv_calendar_dialog_warning"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_calendar_dialog_body"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/img_calendar_dialog_warning"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingHorizontal="14dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/tv_calendar_dialog_warning_header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="돌 리포트가 없어요"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_calendar_dialog_warning" />
+        <ImageView
+            android:id="@+id/iv_rocks_alert"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:src="@drawable/img_rocks_alert"
+            app:layout_constraintDimensionRatio="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:layout_marginTop="12dp"
-        android:src="@drawable/ic_calendar_close"
-        android:id="@+id/iv_ugly_rock"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_calendar_dialog_warning_header"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <TextView
+            android:id="@+id/tv_calendar_dialog_warning_header"
+            style="@style/Typography.Sopkathon.Android3.Headline1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="돌 리포트가 없어요"
+            android:textColor="@color/neutral10"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_rocks_alert" />
 
-    <TextView
-        android:id="@+id/tv_calendar_dialog_comment1"
-        android:text="이날 도를 깎지 못했어요"
-        android:layout_marginTop="12dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/iv_ugly_rock"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <TextView
+            android:id="@+id/tv_calendar_dialog_comment1"
+            style="@style/Typography.Sopkathon.Android3.Body2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="이날 도를 깎지 못했어요"
+            android:textColor="@color/neutral20"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_calendar_dialog_warning_header" />
 
-    <TextView
-        android:id="@+id/tv_calendar_dialog_comment2"
-        android:text=" 다음 번에는 꼭 하루 한 번 깎아주세요!"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_calendar_dialog_comment1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <TextView
+            android:id="@+id/tv_calendar_dialog_comment2"
+            style="@style/Typography.Sopkathon.Android3.Body2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" 다음 번에는 꼭 하루 한 번 깎아주세요!"
+            android:textColor="@color/neutral20"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_calendar_dialog_comment1" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <Button
         android:id="@+id/btn_calendar_dialog_confirm"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/shape_green_fill_10_rect"
         android:text="확인"
-        app:layout_constraintTop_toBottomOf="@id/tv_calendar_dialog_comment2"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cl_calendar_dialog_body" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
