--- a/app/src/main/res/layout/item_rock.xml
+++ b/app/src/main/res/layout/item_rock.xml
@@ -3,10 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="10dp">
+    android:background="@null">
 
     <ImageView
         android:id="@+id/iv_rock"
+        android:src="@drawable/img_rocks_none"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
