--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
     <color name="neutral80">#C5C7C3</color>
     <color name="neutral90">#E1E3DF</color>
     <color name="neutral95">#EFF1ED</color>
-    <color name="neutral98">#F8FAF5</color>
+    <color name="neutral98">#F9F6EE</color>
     <color name="neutral100">#FFFFFF</color>
 
 </resources>
