--- a/app/src/main/res/layout/activity_shake.xml
+++ b/app/src/main/res/layout/activity_shake.xml
@@ -5,83 +5,113 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.main.MainActivity">
+    android:background="@color/neutral98">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_shake_top_bar"
+        android:layout_width="match_parent"
+        android:layout_height="87dp"
+        android:background="@color/green45"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_stone"
+            android:layout_marginTop="43dp"
+            android:layout_marginStart="36dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <View
+        android:id="@+id/v_shake_line1"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/neutral90"
+        app:layout_constraintTop_toBottomOf="@id/cl_shake_top_bar"/>
+
 
     <TextView
-        android:id="@+id/tv_main_date"
+        android:id="@+id/tv_shake_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="5월 19일"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textAppearance="@style/Typography.Sopkathon.Android3.Headline2"
+        android:layout_marginTop="72dp"
+        app:layout_constraintTop_toBottomOf="@id/cl_shake_top_bar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
 
     <ImageView
-        android:id="@+id/iv_main_calendar"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_margin="20dp"
-        android:src="@drawable/ic_launcher_background"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_main_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="오늘의 도를 깎아볼까요?"
-        android:layout_marginTop="50dp"
-        android:textAppearance="@style/Typography.Sopkathon.Android3.Headline3"
-        app:layout_constraintTop_toBottomOf="@id/tv_main_date"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_main_subtitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="울퉁불퉁 돌을 눌러 도를 깎으러 가보아요!"
-        app:layout_constraintTop_toBottomOf="@id/tv_main_title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <ImageView
-        android:id="@+id/iv_main_stone"
+        android:id="@+id/iv_shake_stone"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="30dp"
-        tools:src="@drawable/ic_launcher_background"
+        android:layout_marginTop="36dp"
+        android:src="@drawable/img_ugly_rock"
         app:layout_constraintDimensionRatio="1"
-        app:layout_constraintTop_toBottomOf="@id/tv_main_subtitle"
+        app:layout_constraintTop_toBottomOf="@id/tv_shake_date"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+    <TextView
+        android:id="@+id/tv_shake_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="오늘의 도를 깎아볼까요?"
+        android:layout_marginTop="50dp"
+        android:textAppearance="@style/Typography.Sopkathon.Android3.Headline1"
+        app:layout_constraintTop_toBottomOf="@id/iv_shake_stone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+    <TextView
+        android:id="@+id/tv_shake_subtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="울퉁불퉁 돌을 눌러 도를 깎으러 가보아요!"
+        android:textAppearance="@style/Typography.Sopkathon.Android3.Body2"
+        app:layout_constraintTop_toBottomOf="@id/tv_shake_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/tv_shake_back"
+        android:id="@+id/tv_shake_backhome"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="홈으로 돌아가기"
+        android:textColor="@color/green45"
         android:gravity="center"
-        android:layout_marginEnd="8dp"
-        android:paddingVertical="13dp"
+        android:visibility="gone"
+        android:background="@drawable/shape_white_fill_green_line_10_rect"
+        android:textAppearance="@style/Typography.Sopkathon.Android3.Button"
+        android:paddingVertical="16dp"
         android:layout_marginStart="20dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_main_stone"
-        app:layout_constraintEnd_toStartOf="@id/tv_shake_healing_card" />
+        app:layout_constraintEnd_toStartOf="@id/tv_shake_healing"/>
 
     <TextView
-        android:id="@+id/tv_shake_healing_card"
+        android:id="@+id/tv_shake_healing"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="힐링카드 확인하러 가기"
-        android:paddingVertical="13dp"
         android:gravity="center"
+        android:visibility="gone"
+        android:paddingVertical="16dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintTop_toBottomOf="@id/iv_main_stone"
+        android:layout_marginStart="4dp"
+        android:textColor="@color/neutral100"
+        android:text="힐링카드 확인하기"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/shape_green_fill_10_rect"
+        android:textAppearance="@style/Typography.Sopkathon.Android3.Button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_shake_back" />
+        app:layout_constraintStart_toEndOf="@id/tv_shake_backhome" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
