--- a/app/src/main/res/layout/fragment_calendar_warning_dialog.xml
+++ b/app/src/main/res/layout/fragment_calendar_warning_dialog.xml
@@ -4,16 +4,17 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/shape_white_fill_20_rect"
-    android:paddingHorizontal="20dp"
+    android:padding="20dp"
     android:paddingVertical="40dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_calendar_dialog_body"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingHorizontal="14dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
             android:id="@+id/iv_rocks_alert"
@@ -54,7 +55,7 @@
             style="@style/Typography.Sopkathon.Android3.Body2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" 다음 번에는 꼭 하루 한 번 깎아주세요!"
+            android:text="다음 번에는 꼭 하루 한 번 깎아주세요!"
             android:textColor="@color/neutral20"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
