[add] #20 string resource

--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:text="월간 돌 리포트"
+            android:text="@string/tv_calendar_title"
             style="@style/Typography.Sopkathon.Android3.Headline2"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="42dp"
-        android:text="2023"
+        android:text="@string/tv_calendar_year"
         style="@style/Typography.Sopkathon.Android3.Body3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
             android:id="@+id/tv_calendar_month_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="5"
+            android:text="@string/tv_calendar_month_number"
             style="@style/Typography.Sopkathon.Android3.Headline2"
             android:textColor="@color/neutral10"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -65,10 +65,10 @@
 
         <TextView
             android:id="@+id/tv_calendar_month_text"
+            style="@style/Typography.Sopkathon.Android3.Headline2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="월"
-            style="@style/Typography.Sopkathon.Android3.Headline2"
+            android:text="@string/tv_calendar_month_text"
             android:textColor="@color/neutral10"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
