--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
-        android:text="5월 19일"
+        android:text="@string/tv_main_date"
         android:textAppearance="@style/Typography.Sopkathon.Android3.Headline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="오늘의 도를 깎아볼까요?"
+        android:text="@string/tv_main_title"
         android:textAppearance="@style/Typography.Sopkathon.Android3.Headline1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +85,7 @@
         android:id="@+id/tv_main_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="울퉁불퉁 돌을 눌러 도를 깎으러 가보아요!"
+        android:text="@string/tv_main_subtitle"
         android:textAppearance="@style/Typography.Sopkathon.Android3.Body2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
