--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -29,7 +29,7 @@
         android:id="@+id/tv_question_number_unit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="#"
+        android:text="@string/tv_question_number_unit"
         android:textAppearance="@style/Typography.Sopkathon.Android3.Body3"
         android:layout_marginStart="20dp"
         android:layout_marginTop="60dp"
@@ -40,7 +40,7 @@
         android:id="@+id/tv_question_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1"
+        android:text="@string/tv_question_number"
         android:textAppearance="@style/Typography.Sopkathon.Android3.Body3"
         android:layout_marginTop="60dp"
         app:layout_constraintStart_toEndOf="@id/tv_question_number_unit"
@@ -60,8 +60,9 @@
         android:id="@+id/tv_month"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="5"
+        android:text="@string/tv_month"
         android:textAppearance="@style/Typography.Sopkathon.Android3.Body3"
+        android:textColor="@color/neutral30"
         android:layout_marginStart="4dp"
         app:layout_constraintStart_toEndOf="@id/iv_dot"
         app:layout_constraintTop_toTopOf="@id/tv_question_number"/>
@@ -70,8 +71,9 @@
         android:id="@+id/tv_month_unit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="월"
+        android:text="@string/tv_month_unit"
         android:textAppearance="@style/Typography.Sopkathon.Android3.Body3"
+        android:textColor="@color/neutral30"
         app:layout_constraintStart_toEndOf="@id/tv_month"
         app:layout_constraintTop_toTopOf="@id/tv_month"/>
 
@@ -79,8 +81,9 @@
         android:id="@+id/tv_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="19"
+        android:text="@string/tv_day"
         android:textAppearance="@style/Typography.Sopkathon.Android3.Body3"
+        android:textColor="@color/neutral30"
         app:layout_constraintStart_toEndOf="@id/tv_month_unit"
         app:layout_constraintTop_toTopOf="@id/tv_month_unit"/>
 
@@ -88,8 +91,9 @@
         android:id="@+id/tv_day_unit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="일"
+        android:text="@string/tv_day_unit"
         android:textAppearance="@style/Typography.Sopkathon.Android3.Body3"
+        android:textColor="@color/neutral30"
         app:layout_constraintStart_toEndOf="@id/tv_day"
         app:layout_constraintTop_toTopOf="@id/tv_day"/>
 
@@ -97,7 +101,7 @@
         android:id="@+id/tv_question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="오늘 하루, 감사한 사람과\n그 이유는 무엇인가요?"
+        android:text="@string/tv_question"
         android:textAppearance="@style/Typography.Sopkathon.Android3.Headline2"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="@id/tv_question_number_unit"
@@ -118,7 +122,7 @@
         android:id="@+id/et_answer"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:hint="이곳을 눌러 답변을 입력해주세요"
+        android:hint="@string/et_answer"
         android:textAppearance="@style/Typography.Sopkathon.Android3.Body2"
         android:inputType="text"
         android:background="@null"
@@ -145,9 +149,8 @@
         android:id="@+id/tv_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="저장"
+        android:text="@string/tv_save"
         android:textAppearance="@style/Typography.Sopkathon.Android3.Button"
-
         android:textColor="@color/neutral60"
         android:layout_marginVertical="16dp"
         app:layout_constraintStart_toStartOf="@id/iv_btn_save"
