--- a/app/src/main/res/layout/activity_shake.xml
+++ b/app/src/main/res/layout/activity_shake.xml
@@ -39,7 +39,7 @@
         android:id="@+id/tv_shake_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="5월 19일"
+        android:text="@string/tv_shake_date"
         android:textAppearance="@style/Typography.Sopkathon.Android3.Headline2"
         android:layout_marginTop="72dp"
         app:layout_constraintTop_toBottomOf="@id/cl_shake_top_bar"
@@ -62,7 +62,7 @@
         android:id="@+id/tv_shake_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="오늘의 도를 깎아볼까요?"
+        android:text="@string/tv_shake_title"
         android:layout_marginTop="50dp"
         android:textAppearance="@style/Typography.Sopkathon.Android3.Headline1"
         app:layout_constraintTop_toBottomOf="@id/iv_shake_stone"
@@ -72,7 +72,7 @@
         android:id="@+id/tv_shake_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="울퉁불퉁 돌을 눌러 도를 깎으러 가보아요!"
+        android:text="@string/tv_shake_subtitle"
         android:textAppearance="@style/Typography.Sopkathon.Android3.Body2"
         app:layout_constraintTop_toBottomOf="@id/tv_shake_title"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +82,7 @@
         android:id="@+id/tv_shake_backhome"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="홈으로 돌아가기"
+        android:text="@string/tv_shake_backhome"
         android:textColor="@color/green45"
         android:gravity="center"
         android:visibility="gone"
@@ -106,7 +106,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginStart="4dp"
         android:textColor="@color/neutral100"
-        android:text="힐링카드 확인하기"
+        android:text="@string/tv_shake_healing"
         android:layout_marginBottom="16dp"
         android:background="@drawable/shape_green_fill_10_rect"
         android:textAppearance="@style/Typography.Sopkathon.Android3.Button"
